fixing margins on mobile

--- a/styles/sass/_gamepage.scss
+++ b/styles/sass/_gamepage.scss
@@ -2,7 +2,7 @@
 .gamePage {
     display: none;
     height: 100vh;
-    padding-bottom: 15px;
+    margin-bottom: 15px;
         h2 {
             font-family: $primaryFontFamily;
             @include fontSize(60);
